field-forms/objects/Anomaly_Alert__c/Anomaly_Alert__c.object-meta.xml
<CustomObject>
    <description>A detected cross-visit anomaly at a location (e.g. the same finding recurring across multiple inspections). Surfaced in the Ops Console and used to proactively draft a brand-facing communication before the customer escalates. (Vignette 3)</description>
    <label>Anomaly Alert</label>
    <pluralLabel>Anomaly Alerts</pluralLabel>
    <nameField>
        <displayFormat>AA-{00000}</displayFormat>
        <label>Anomaly Alert Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>