field-forms/objects/Anomaly_Alert__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>The location where the anomaly was detected.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Anomaly Alerts</relationshipLabel>
    <relationshipName>Anomaly_Alerts</relationshipName>
    <type>Lookup</type>
</CustomField>