field-forms/objects/Anomaly_Alert__c/fields/Brand_Contact__c.field-meta.xml
<CustomField>
    <fullName>Brand_Contact__c</fullName>
    <description>The brand-side contact to proactively notify (e.g. the brand quality manager).</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brand Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Anomaly Alerts</relationshipLabel>
    <relationshipName>Anomaly_Alerts</relationshipName>
    <type>Lookup</type>
</CustomField>