field-forms/objects/Anomaly_Alert__c/fields/Dedupe_Key__c.field-meta.xml
<CustomField>
    <fullName>Dedupe_Key__c</fullName>
    <description>Uniqueness guard for open alerts: Account Id + SHA-256 of the normalized pattern text, set by NeuraFormAnomalyEscalation. The unique index closes the check-then-insert race between concurrent queueables (two findings landing at once can both pass the open-alert query). When an alert closes (Sent/Dismissed), AnomalyAlertTrigger suffixes this with the record Id to free the slot so the same pattern can re-alert later.</description>
    <externalId>true</externalId>
    <label>Dedupe Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>