field-forms/objects/Anomaly_Alert__c/fields/Draft_Message__c.field-meta.xml
<CustomField>
    <fullName>Draft_Message__c</fullName>
    <description>AI-drafted, brand-facing communication ready for Ops to review and send.</description>
    <label>Draft Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>