field-forms/objects/Anomaly_Alert__c/fields/Linked_Form__c.field-meta.xml
<CustomField>
    <fullName>Linked_Form__c</fullName>
    <description>The inspection visit whose finding tripped the threshold.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Triggering Inspection</label>
    <referenceTo>Linked_Form__c</referenceTo>
    <relationshipLabel>Anomaly Alerts</relationshipLabel>
    <relationshipName>Anomaly_Alerts</relationshipName>
    <type>Lookup</type>
</CustomField>