field-forms/objects/Anomaly_Alert__c/fields/Pattern_Summary__c.field-meta.xml
<CustomField>
    <fullName>Pattern_Summary__c</fullName>
    <description>Short description of the recurring pattern that was detected.</description>
    <label>Pattern Summary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>