field-forms/objects/Anomaly_Alert__c/fields/Recurrence_Count__c.field-meta.xml
<CustomField>
    <fullName>Recurrence_Count__c</fullName>
    <description>How many recent visits at this location exhibited the pattern.</description>
    <label>Recurrence Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>