field-forms/objects/Anomaly_Alert__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>New</fullName><default>true</default><label>New</label></value>
            <value><fullName>Reviewed</fullName><default>false</default><label>Reviewed</label></value>
            <value><fullName>Sent</fullName><default>false</default><label>Sent</label></value>
            <value><fullName>Dismissed</fullName><default>false</default><label>Dismissed</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>